--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -81,13 +81,13 @@ html(lang="zxx")
 					div.projects__item
 						div.projects__content
 							a(href="#").projects__image
-								img.projects__img(src="https://cdn.bolvo.com/mashura/images/gallery/1.jpg", alt="project1")
+								img.projects__img(src="src/images/portfolio/nacheku_collage.jpg", alt="project1")
 							div.projects__name \\ THE MOCKUP
 							a(href="#").projects__title iPhone XS With Shadow
 					div.projects__item
 						div.projects__content
 							a(href="#").projects__image
-								img.projects__img(src="https://cdn.bolvo.com/mashura/images/gallery/2.jpg", alt="project2")
+								img.projects__img(src="src/images/portfolio/atlbank_preview.jpg", alt="project2")
 							div.projects__name \\ PHOTOGRAPHY
 							a(href="#").projects__title Business Cards
 					div.projects__item
